src/components/FeatureCard/FeatureCard.module.scss
.featureCards {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0;
  left: 50%;
  width: 100%;
  background-color: #f1f4f9;
  z-index: 5;
  transform: translateX(-50%);
  overflow: hidden;
}

.featureCard {
  width: auto;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 16px 30px;
  // overflow: hidden;
  transition: transform 0.6s linear, opacity 0.4s linear;
  z-index: 10;
}

.cardContent {
  width: 100%;
  max-width: 253px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  text-align: left;
  cursor: pointer;
  flex-shrink: 0;
  gap: 0;
  padding: 0 16px;
  will-change: transform;
}

.cardImage {
  position: relative;
  margin-bottom: 20px;
  width: 100%;
  max-width: 220px;
  height: 100%;
  max-height: 640px;
  margin: 0 auto;
  will-change: transform, opacity;

  &::before {
    position: absolute;
    content: "";
    display: block;
    top: 50%;
    left: 50%;
    width: calc(var(--card-width, 220px) + 60px);
    height: calc(var(--card-width, 220px) + 60px);
    background-color: var(--circle-color);
    opacity: var(--dynamic-opacity, 1) !important;
    // transform: translate(-50%, -50%);
    border-radius: 50%;
    z-index: 1;
    will-change: transform, opacity;
    transform: translate(-50%, -50%) scale(var(--circle-scale, 1));
  }

  &.selected::before {
    animation: scale-in 0.5s linear forwards;
  }

  &.expanding::before {
    animation: expand-left 0.7s ease-out forwards;
  }

  img {
    position: relative;
    display: block;
    margin: 0 0 0 -10px;
    width: calc(100% + 20px);
    height: 100%;
    object-fit: contain;
    z-index: 2;
  }
}

@keyframes scale-in {
  0% {
    transform: translate(-50%, -50%) scale(0.5);
    opacity: 0;
  }
  100% {
    transform: translate(-50%, -50%) scale(1);
    opacity: 1;
  }
}

@keyframes expand-left {
  0% {
    transform-origin: left center;
    transform: translate(-50%, -50%) scale(0.6);
    opacity: 0.6;
  }
  60% {
    transform-origin: left center;
    transform: translate(-65%, -50%) scale(1.4);
    opacity: 0.9;
  }
  100% {
    transform-origin: left center;
    transform: translate(-80%, -50%) scale(2.2);
    opacity: 1;
  }
}

.cardNumber {
  width: 100%;
  font-size: 44px;
  font-weight: 500;
  line-height: 52px;
  margin-bottom: 20px;
}

.cardTitle {
  width: 100%;
  font-size: 22px;
  font-weight: 700;
  line-height: 28px;
  margin-bottom: 20px;
}

.cardDescription {
  width: 100%;
  font-size: 18px;
  font-weight: 400;
  line-height: 26px;
  margin-bottom: 16px;
}

